# ASCC

./: .env.dist  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: cli.py  main.py
backend/app/accidents/: commands.py  ingest.py  lookup_tables.py  models.py  routers.py  schemas.py  value_sets.py
backend/app/core/: database.py  logging_config.py  settings.py  version.py
backend/app/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/nginx/: default.conf.template
frontend/src/: index.html  styles.css
frontend/src/app/: app.html  app.ts
frontend/src/app/accident-map/: accident-api.ts  accident-map.css  accident-map.html  accident-map.spec.ts  accident-map.ts
