[project]
name = "ascc"
description = "Aviation Safety Coding Challenge"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.1",
    "tortoise-orm[accel,asyncpg]>=1.1.7",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".venv",
    "app/migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tortoise]
tortoise_orm = "app.core.database.TORTOISE_ORM"
migrations = "app/migrations"
